2004-10-11  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented version number to 1.1.5.

2004-10-11  Damien Sandras  <dsandras@gnome.org>

	* src/stunclient.cpp: Enhanced message.

2004-10-11  Damien Sandras  <dsandras@gnome.org>

	* src/stunclient.cpp: Enhanced the StunClient so that it can also
	serve as a STUN configurator.

2004-10-11  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated with CVS news.
	
	* configure.in: Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in: Removed key allowing to set the
	Fullscreen image width and height.

	* src/common.h, src/gdkvideoio.cpp, src/gdkvideoio.h, 
	src/main_window.cpp: Added fullscreen back.
	
	* src/endpoint.cpp: Fixed CIF mode thanks to Guilhem Tardy.

	* src/pref_window.cpp: Removed now unuseful preference.

2004-10-09  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Added back bilinear filtering when zooming.

2004-10-09  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated with CVS news.

	* configure.in: Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in: Added GConf keys for the remote and
	local video windows.

	* src/gdkvideoio.cpp, src/gdkvideoio.h, src/main_window.cpp, 
	src/main_window.h, src/misc.cpp, src/misc.h: Added back
	Picture-In-Picture mode. Added independant zoom values for the video
	displayed in the local video popup, remote video popup and main GUI.
	The local video picture is now always 1/3 of the remote video picture
	whatever the exchanged pictures sizes are.

2004-10-09 Kilian Krause <kk@verfaction.de>

	* configure.in: Fixed previous commit.

2004-10-09 Kilian Krause <kk@verfaction.de>

	* configure.in: Adjusted to latest PWLib/OpenH323 CVS tag.

2004-10-04  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/Makefile.am: Moved everything to g++.

	* lib/contacts/gm_contacts-convert.c renamed to 
	lib/contacts/gm_contacts-convert.cpp.

	* lib/contacts/gm_contacts-dnd.c renamed to 
	lib/contacts/gm_contacts-dnd.cpp.
