@@ -1,3 +1,8 @@
+2004-10-12  Damien Sandras  <dsandras@gnome.org>
+
+	* src/urlhandler.cpp: Cleaned code. Fixed bugs #150416 and #150417
+	reported by Simon Mungewell. Thanks for his patch too.
+
 2004-10-11  Damien Sandras  <dsandras@gnome.org>
 
 	* configure.in: Incremented version number to 1.1.5.
